# clinical-workflow-orchestrator

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api-gateway/: package.json  tsconfig.json
apps/api-gateway/src/: app.module.ts  main.ts
apps/api-gateway/src/audit/: audit-event.dto.ts  audit.controller.ts  audit.module.ts
apps/api-gateway/src/database/: database.module.ts
apps/api-gateway/src/health/: health-response.dto.ts  health.controller.ts
apps/api-gateway/src/queue/: queue.module.ts  workflow-job.data.ts  workflow-queue.constants.ts  workflow-queue.service.ts  workflow-queue.worker.ts
apps/api-gateway/src/workflow-engine/: workflow-engine.client.ts  workflow-engine.module.ts
apps/api-gateway/src/workflows/: create-workflow-request.dto.ts  workflow-intake-response.dto.ts  workflow-record.dto.ts  workflow-status.dto.ts  workflow.controller.ts  workflow.module.ts  workflow.repository.ts
apps/workflow-engine/: README.md  pyproject.toml  setup.py
apps/workflow-engine/app/: main.py
apps/workflow-engine/app/privacy/: deidentification.py
apps/workflow-engine/app/routes/: health.py  workflows.py
apps/workflow-engine/app/schemas/: workflow.py
apps/workflow-engine/clinical_workflow_orchestrator_workflow_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
db/migrations/: 0001_init.sql
