[project]
name = "clinical-workflow-orchestrator-workflow-engine"
version = "0.1.0"
description = "Internal workflow and policy engine for clinical orchestration"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.12,<0.116.0",
  "clinical-llm-gateway==0.1.0",
  "uvicorn[standard]>=0.34.2,<0.35.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
